force-app/main/default/objects/SVMXA360__LocationServices__c/SVMXA360__LocationServices__c.object-meta.xml
<CustomObject>
    <description>Finds the Depot/Locations in the Depot Management feature.</description>
    <label>Location Services</label>
    <nameField>
        <displayFormat>LS-{00000}</displayFormat>
        <label>Location Services Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Location Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>