force-app/main/default/objects/SVMXA360__LocationServices__c/fields/SVMXA360__Location__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Location__c</fullName>
    <description>This field is a lookup field that contains the ID of the Location record. This Location data will be displayed when a match is found.</description>
    <label>Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Location Services</relationshipLabel>
    <relationshipName>Location_Services</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>