force-app/main/default/objects/SVMXA360__LocationServices__c/fields/SVMXA360__Product__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is a lookup field that contains the ID of the Product record. This field will be used when their match is to be found against a Product.</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Location Services</relationshipLabel>
    <relationshipName>Location_Services</relationshipName>
    <type>Lookup</type>
</CustomField>