force-app/main/default/objects/SVMXA360__LocationServices__c/fields/SVMXA360__ProductFamily__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ProductFamily__c</fullName>
    <description>Indicates the Family of the Product.</description>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Laptops</fullName>
            </value>
            <value>
                <fullName>PCs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>