force-app/main/default/objects/SVMXA360__LocationServices__c/fields/SVMXA360__ServiceType__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ServiceType__c</fullName>
    <description>Indicates the type of Service for which a matching Location needs to be found</description>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Depot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>